--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://xitkj3.vercel.app/" />
+		<meta property="og:url" content="https://faselive.vercel.app/" />
 		<meta property="og:title" content="XI F 5" />
 		<meta
 			property="og:description"
 			content="Selamat datang di halaman resmi kelas XI F 5 Man 1 Jepara! Mari mengenal lebih dekat tentang kami, siswa-siswi kelas XI F 5." />
-		<meta property="og:image" content="https://xitkj3.vercel.app/Welcome.png" />
+		<meta property="og:image" href="/LogoFaselive.jpeg" />
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
-		<meta property="twitter:url" content="https://xitkj3.vercel.app/" />
+		<meta property="twitter:url" content="https:/faselive.vercel.app/" />
 		<meta property="twitter:title" content="XI F 5" />
 		<meta
 			property="twitter:description"
 			content="Selamat datang di halaman resmi kelas XI F 5 Man 1 Jepara! Mari mengenal lebih dekat tentang kami, siswa-siswi kelas XI F 5." />
-		<meta property="twitter:image" content="https://xitkj3.vercel.app/Welcome.png" />
+		<meta property="twitter:image" href="/LogoFaselive.jpeg" />
 	</head>
 	<body>
 		<div id="root"></div>
